--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
   "private": false,
   "dependencies": {
     "@angular/animations": "^5.1.0",
-    "@angular/core": "^5.1.0",
     "@angular/common": "^5.1.0",
-    "@angular/router": "^5.1.0",
+    "@angular/core": "^5.1.0",
     "@angular/forms": "^5.1.0",
-    "@ng-app-framework/api": "^1.0.7",
-    "@ng-app-framework/core": "^1.0.3",
+    "@angular/router": "^5.1.0",
+    "@ng-app-framework/api": "^1.0.9",
+    "@ng-app-framework/core": "^1.0.5",
     "@ng-app-framework/safe": "^1.0.0",
-    "@ng-app-framework/time": "^1.0.2",
-    "tether": "^1.4.3",
+    "@ng-app-framework/time": "^1.0.3",
     "bootstrap": "^3.3.7",
     "ngx-toastr": "^8.0.0",
-    "rxjs": "^5.5.5"
+    "rxjs": "^5.5.5",
+    "tether": "^1.4.3"
   },
   "devDependencies": {
     "@angular/cli": "^1.6.0",
@@ -40,10 +40,10 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@types/jasmine": "2.5.45",
-    "@types/node": "^6.0.90",
+    "@types/node": "^6.0.93",
     "ajv": "^5.5.1",
-    "codelyzer": "^4.0.1",
-    "core-js": "^2.5.1",
+    "codelyzer": "^4.0.2",
+    "core-js": "^2.5.3",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
     "jasmine-spec-reporter": "^4.2.1",
