--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
         "@angular/core": "^5.1.3",
         "@angular/forms": "^5.1.3",
         "@angular/router": "^5.1.3",
-        "@ng-app-framework/alert": "^1.1.11",
-        "@ng-app-framework/api": "^1.1.10",
-        "@ng-app-framework/core": "^1.1.11",
-        "@ng-app-framework/location": "^1.1.10",
-        "@ng-app-framework/safe": "^1.1.10",
-        "@ng-app-framework/time": "^1.1.10",
+        "@ng-app-framework/alert": "^1.1.13",
+        "@ng-app-framework/api": "^1.1.12",
+        "@ng-app-framework/core": "^1.1.14",
+        "@ng-app-framework/location": "^1.1.12",
+        "@ng-app-framework/safe": "^1.1.12",
+        "@ng-app-framework/time": "^1.1.12",
         "ngx-toastr": "^8.1.0",
         "rxjs": "^5.5.6"
     },
@@ -77,7 +77,16 @@
     "$schema": "./node_modules/ng-packagr/package.schema.json",
     "ngPackage": {
         "lib": {
-            "entryFile": "index.ts"
+            "entryFile": "index.ts",
+            "name": "ng-app-maintenance",
+            "externals": {
+                "@ng-app-framework/core": "ng-app-core",
+                "@ng-app-framework/alert": "ng-app-alert",
+                "@ng-app-framework/api": "ng-app-api",
+                "@ng-app-framework/location": "ng-app-location",
+                "@ng-app-framework/safe": "ng-app-safe",
+                "@ng-app-framework/time": "ng-app-time"
+            }
         }
     }
 }
