--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
         "@angular/core": "^5.1.3",
         "@angular/forms": "^5.1.3",
         "@angular/router": "^5.1.3",
-        "@ng-app-framework/alert": "^1.1.13",
-        "@ng-app-framework/api": "^1.1.12",
-        "@ng-app-framework/core": "^1.1.14",
-        "@ng-app-framework/location": "^1.1.12",
-        "@ng-app-framework/safe": "^1.1.12",
-        "@ng-app-framework/time": "^1.1.12",
+        "@ng-app-framework/alert": "^1.1.14",
+        "@ng-app-framework/api": "^1.1.13",
+        "@ng-app-framework/core": "^1.1.15",
+        "@ng-app-framework/location": "^1.1.13",
+        "@ng-app-framework/safe": "^1.1.13",
+        "@ng-app-framework/time": "^1.1.13",
         "ngx-toastr": "^8.1.0",
         "rxjs": "^5.5.6"
     },
@@ -80,6 +80,7 @@
             "entryFile": "index.ts",
             "name": "ng-app-maintenance",
             "externals": {
+                "rxjs/Rx": "rxjs",
                 "@ng-app-framework/core": "ng-app-core",
                 "@ng-app-framework/alert": "ng-app-alert",
                 "@ng-app-framework/api": "ng-app-api",
