--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@angular/forms": "^5.1.3",
         "@angular/router": "^5.1.3",
         "@ng-app-framework/alert": "^1.1.14",
-        "@ng-app-framework/api": "^1.1.13",
+        "@ng-app-framework/api": "^1.1.14",
         "@ng-app-framework/core": "^1.1.15",
         "@ng-app-framework/location": "^1.1.13",
         "@ng-app-framework/safe": "^1.1.13",
@@ -81,6 +81,7 @@
             "name": "ng-app-maintenance",
             "externals": {
                 "rxjs/Rx": "rxjs",
+                "ngx-toastr": "ngx-toastr",
                 "@ng-app-framework/core": "ng-app-core",
                 "@ng-app-framework/alert": "ng-app-alert",
                 "@ng-app-framework/api": "ng-app-api",
